# lightweight-neural-nets

./: .gitignore  .gitmodules  README.md  notes.md
dataset/digit_dataset/: plot_digits_last_image.py
embedded/: CMakeLists.txt  log  serial_sender.py
embedded-model-ff/: CMakeLists.txt  serial_sender.py
embedded-model-ff/model-ff/: CMakeLists.txt
embedded-model-ff/model-ff/adam/: adam.c  adam.h
embedded-model-ff/model-ff/buffers/: buffers.c  buffers.h
embedded-model-ff/model-ff/data/: data.c  data.h
embedded-model-ff/model-ff/ff-cell/: ff-cell.c  ff-cell.h
embedded-model-ff/model-ff/ff-net/: ff-net.c  ff-net.h
embedded-model-ff/model-ff/ff-utils/: ff-utils.c  ff-utils.h
embedded-model-ff/model-ff/logging/: logging.c  logging.h
embedded-model-ff/model-ff/losses/: losses.c  losses.h
embedded-model-ff/model-ff/utils/: utils.c  utils.h
embedded/main/: CMakeLists.txt  main.cpp
embedded/models/model-bp/: CMakeLists.txt  model-bp.cpp  model-bp.hpp
federated_learning_analysis/: main.py  requirements.txt
framework/: Makefile
metrics/: CMakeLists.txt
model-bp/: Makefile  model-bp.cpp  model-bp.hpp  run.sh
model-ff/: CMakeLists.txt  Makefile  model-ff.cpp  model-ff.h  model-ff.hpp
model-ff-sl/: Makefile
model-ff/interface/: model-ff-parameters.hpp  model-ff.cpp  model-ff.hpp
model-ff/lib/adam/: adam.h
model-ff/lib/data/: data.c  data.h
model-ff/lib/ff-cell/: ff-cell.c  ff-cell.h
model-ff/lib/ff-lib/: ff-lib.c  ff-lib.h
model-ff/lib/ff-net/: ff-net.c  ff-net.h
model-ff/lib/ff-utils/: ff-utils.h
model-ff/lib/logging/: logging.c  logging.h
model-ff/lib/losses/: losses.c
model-ff/lib/utils/: utils.c  utils.h
model-ff/src/: data.c  digits.c  ff-lib.c  ff-lib.h  logging.c  logging.h  main.c  utils.c
(+85 files in other folders)
